footer indetification in index.html and styled it in main.css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </tr>
     </tbody>
 </table>
-<footer>
+<footer class="footer-one">
     &copy; 2025 Website | All Rights Reserved
 </footer>
 </body>
